# synapse

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  notes.md
.github/workflows/: release.yml
backend_extension/: .clang-format  CMakeLists.txt  CMakeLists_tests.txt  setup.py
backend_extension/include/: logger.h  neural_probe.h  protocol.h  protocol_parser.h  ring_buffer.h  server.h
backend_extension/python/: attention_hook.py  gradient_hook.py  hook_example.py  run_simulate_llama8b.sh  simulate_llama8b.py
backend_extension/src/: main.cpp  neural_probe.cpp  server_uwebsockets.cpp
backend_extension/tests/: test_main.cpp  test_protocol.cpp  test_ring_buffer.cpp  test_statistics.cpp
backend_extension/tests/fixtures/: golden_packets.h
frontend_dashboard/: .eslintignore  .eslintrc.cjs  .prettierignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend_dashboard/src/lib/: logger.ts  types.test.ts  types.ts  wasm_bridge.ts  ws_client.test.ts  ws_client.ts
frontend_dashboard/src/lib/three/: scene.ts
frontend_dashboard/src/routes/: +page.svelte
project_documentation/dev/: PLAN.md  ROADMAP.md  TEST_PLAN.md
project_documentation/etc/: NOTES.md
wasm_parser/: Cargo.toml  rustfmt.toml
wasm_parser/src/: lib.rs  protocol.rs  protocol_tests.rs
